made changes to the bg image

--- a/index.html
+++ b/index.html
@@ -93,14 +93,18 @@
           <!-- Dropdown Menu End -->
         </div>
       </nav>
-
+<!-- 
       <section class="section_one"></section>
-      <section class="section_two">
-        <div class="bg_con">
-          <img class="bg_img" src="./img/Group 26864.png" alt="" />
+      <section class="section_two"> -->
+      
+    </div>
+
+      <div class="bg_con">
+          <div class="bg_overlay">
+            <h1>TÉLÉCHARGER LE PROGRAMME</h1>
+          </div>
         </div>
       </section>
-    </div>
     <!-- Halfmoon JS -->
     <script src="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/js/halfmoon.min.js"></script>
 
